# taobao-sourcing-mcp

./: .gitignore  CLAUDE.md  NOTES.md  README.md  config.toml  pyproject.toml  server.py
evals/: evaluation.xml
scripts/: analyze_fixture.py  capture_fixture.py  capture_reviews.py  capture_search.py  cart_recon.py  cart_smoke.py  check_embedded.py  check_login.py  compare.py  deep_price_check.py  diagnose_skus.py  e2e_smoke.py  explore_components.py  explore_data.py  logistics_direct_debug.py  logistics_recon.py  messages_smoke.py  msg_recon.py  msg_recon2.py  msgcenter_recon.py  orders_recon.py  phase1_captcha_sim.py  phase1_smoke.py  read_bought.py  review_count.py  review_dom_recon.py  review_drawer_recon.py  review_viewall_recon.py  run_search.py  run_track.py  sanitize_fixture.py
skill/: SKILL.md  supplier_templates.md
src/: cart.py  config.py  errors.py  inventory.py  log.py  models.py
src/browser/: pacing.py  session.py
src/extract/: account.py  interceptor.py  linker.py  messages.py  orders.py  product.py  qa.py  reviews.py  search.py  selectors.py
tests/: test_evals.py  test_hardening.py  test_linker.py  test_messages.py  test_orders.py  test_output.py  test_pacing_config.py  test_product.py  test_reviews.py  test_search.py  test_tools.py
tests/fixtures/736546459871/: detail_res.json
