[project]
name = "taobao-sourcing"
version = "0.1.0"
description = "Local MCP server for human-paced Taobao/Tmall product sourcing: per-SKU prices, variant-linked reviews, Q&A, and xlsx comparison export."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package the src/ tree; server.py is run directly as a stdio entrypoint.
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
